# CRC_detector

./: CMakeLists.txt  README.md  run.cc
include/: CRC_CODE.h  checker.h  creator.h  data.h
src/: CMakeLists.txt  CRC_CODE.cc  checker.cc  creator.cc  data.cc
